text input animation done, working on progress button

--- a/css/main.css
+++ b/css/main.css
@@ -591,6 +591,157 @@ input:focus {
   top: 1px;
 }
 
+/*progress button animation*/
+/* Button container */
+/* line 427, scss/_buttons.scss */
+.progress-button {
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  width: 45%;
+  min-width: 250px;
+  margin: 10px;
+}
+
+/* Button style */
+/* line 437, scss/_buttons.scss */
+.progress-button button {
+  display: block;
+  margin: 0 auto;
+  padding: 0;
+  width: 250px;
+  height: 70px;
+  border: 2px solid #1ECD97;
+  border-radius: 40px;
+  background: transparent;
+  color: #1ECD97;
+  letter-spacing: 1px;
+  font-size: 18px;
+  font-family: 'Montserrat', sans-serif;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-transition: background-color 0.3s, color 0.3s, width 0.3s, border-width 0.3s, border-color 0.3s;
+  transition: background-color 0.3s, color 0.3s, width 0.3s, border-width 0.3s, border-color 0.3s;
+}
+
+/* line 455, scss/_buttons.scss */
+.progress-button button:hover {
+  background-color: #1ECD97;
+  color: #fff;
+}
+
+/* line 460, scss/_buttons.scss */
+.progress-button button:focus {
+  outline: none;
+}
+
+/* Text (transition for when returning to initial state) */
+/* line 465, scss/_buttons.scss */
+.progress-button button span {
+  -webkit-transition: opacity 0.3s 0.1s;
+  transition: opacity 0.3s 0.1s;
+}
+
+/* Common style of SVGs */
+/* line 471, scss/_buttons.scss */
+.progress-button svg {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  pointer-events: none;
+}
+
+/* line 480, scss/_buttons.scss */
+.progress-button svg path {
+  opacity: 0;
+  fill: none;
+}
+
+/* line 485, scss/_buttons.scss */
+.progress-button svg.progress-circle path {
+  stroke: #1ECD97;
+  stroke-width: 5;
+}
+
+/* line 490, scss/_buttons.scss */
+.progress-button svg.checkmark path,
+.progress-button svg.cross path {
+  stroke: #fff;
+  stroke-linecap: round;
+  stroke-width: 4;
+  -webkit-transition: opacity 0.1s;
+  transition: opacity 0.1s;
+}
+
+/* Loading, success and error effects */
+/* line 500, scss/_buttons.scss */
+.loading.progress-button button {
+  width: 70px;
+  /* make a circle */
+  border-width: 5px;
+  border-color: #ddd;
+  background-color: transparent;
+  color: #fff;
+}
+
+/* line 508, scss/_buttons.scss */
+.loading.progress-button span {
+  -webkit-transition: opacity 0.15s;
+  transition: opacity 0.15s;
+}
+
+/* line 513, scss/_buttons.scss */
+.loading.progress-button span,
+.success.progress-button span,
+.error.progress-button span {
+  opacity: 0;
+  /* keep it hidden in all states */
+}
+
+/* line 519, scss/_buttons.scss */
+.success.progress-button button,
+.error.progress-button button {
+  -webkit-transition: background-color 0.3s, width 0.3s, border-width 0.3s;
+  transition: background-color 0.3s, width 0.3s, border-width 0.3s;
+}
+
+/* line 525, scss/_buttons.scss */
+.success.progress-button button {
+  border-color: #1ECD97;
+  background-color: #1ECD97;
+}
+
+/* line 530, scss/_buttons.scss */
+.error.progress-button button {
+  border-color: #FB797E;
+  background-color: #FB797E;
+}
+
+/* line 535, scss/_buttons.scss */
+.loading.progress-button svg.progress-circle path,
+.success.progress-button svg.checkmark path,
+.error.progress-button svg.cross path {
+  opacity: 1;
+  -webkit-transition: stroke-dashoffset 0.3s;
+  transition: stroke-dashoffset 0.3s;
+}
+
+/* Optional elastic effect for the width of the button */
+/* line 544, scss/_buttons.scss */
+.elastic.progress-button button {
+  -webkit-transition: background-color 0.3s, color 0.3s, width 0.3s cubic-bezier(0.25, 0.25, 0.4, 1), border-width 0.3s, border-color 0.3s;
+  -webkit-transition: background-color 0.3s, color 0.3s, width 0.3s cubic-bezier(0.25, 0.25, 0.4, 1.6), border-width 0.3s, border-color 0.3s;
+  transition: background-color 0.3s, color 0.3s, width 0.3s cubic-bezier(0.25, 0.25, 0.4, 1.6), border-width 0.3s, border-color 0.3s;
+}
+
+/* line 550, scss/_buttons.scss */
+.loading.elastic.progress-button button {
+  -webkit-transition: background-color 0.3s, color 0.3s, width 0.3s cubic-bezier(0.6, 0, 0.75, 0.75), border-width 0.3s, border-color 0.3s;
+  -webkit-transition: background-color 0.3s, color 0.3s, width 0.3s cubic-bezier(0.6, -0.6, 0.75, 0.75), border-width 0.3s, border-color 0.3s;
+  transition: background-color 0.3s, color 0.3s, width 0.3s cubic-bezier(0.6, -0.6, 0.75, 0.75), border-width 0.3s, border-color 0.3s;
+}
+
 /* line 5, scss/_canvas.scss */
 #drawing-app {
   overflow: hidden;
@@ -1734,6 +1885,182 @@ body {
   float: right;
   width: 38%;
   border-radius: 200px;
+}
+
+/* Style for text input animation Isao */
+/* line 259, scss/_list.scss */
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
+}
+
+/* line 267, scss/_list.scss */
+.input {
+  position: relative;
+  z-index: 1;
+  display: inline-block;
+  margin-right: 1em;
+  max-width: 22%;
+  width: calc(100% - 2em);
+  vertical-align: top;
+}
+
+/* line 277, scss/_list.scss */
+.input__field {
+  position: relative;
+  display: block;
+  float: right;
+  padding: 0.8em;
+  width: 60%;
+  border: none;
+  border-radius: 0;
+  background: #f0f0f0;
+  color: #aaa;
+  font-weight: bold;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  -webkit-appearance: none;
+  /* for box shadows to show on iOS */
+}
+
+/* line 292, scss/_list.scss */
+.input__field:focus {
+  outline: none;
+}
+
+/* line 296, scss/_list.scss */
+.input__label {
+  display: inline-block;
+  float: right;
+  padding: 0 1em;
+  width: 40%;
+  color: #6a7989;
+  font-weight: bold;
+  font-size: 70.25%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* line 314, scss/_list.scss */
+.input__label-content {
+  position: relative;
+  display: block;
+  padding: 1.6em 0;
+  width: 100%;
+}
+
+/* line 321, scss/_list.scss */
+.graphic {
+  position: absolute;
+  top: 0;
+  left: 0;
+  fill: none;
+}
+
+/* line 328, scss/_list.scss */
+.icon {
+  color: #ddd;
+  font-size: 150%;
+}
+
+/* line 333, scss/_list.scss */
+.input__field--isao {
+  z-index: 10;
+  padding: 0.75em 0.1em 0.25em;
+  width: 100%;
+  background: transparent;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+
+/* line 343, scss/_list.scss */
+.input__label--isao {
+  position: relative;
+  overflow: hidden;
+  padding: 0;
+  width: 100%;
+  color: #dadada;
+  text-align: left;
+}
+
+/* line 352, scss/_list.scss */
+.input__label--isao::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 7px;
+  background: #dadada;
+  -webkit-transform: scale3d(1, 0.4, 1);
+  transform: scale3d(1, 0.4, 1);
+  -webkit-transform-origin: 50% 100%;
+  transform-origin: 50% 100%;
+  -webkit-transition: -webkit-transform 0.3s, background-color 0.3s;
+  transition: transform 0.3s, background-color 0.3s;
+  -webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+  transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+}
+
+/* line 369, scss/_list.scss */
+.input__label--isao::after {
+  content: attr(data-content);
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0.75em 0.15em;
+  color: #8ED676;
+  opacity: 0;
+  -webkit-transform: translate3d(0, 50%, 0);
+  transform: translate3d(0, 50%, 0);
+  -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+  transition: opacity 0.3s, transform 0.3s;
+  -webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+  transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+  pointer-events: none;
+}
+
+/* line 386, scss/_list.scss */
+.input__field--isao:focus + .input__label--isao::before {
+  background-color: #8ED676;
+  -webkit-transform: scale3d(1, 1, 1);
+  transform: scale3d(1, 1, 1);
+}
+
+/* line 392, scss/_list.scss */
+.input__field--isao:focus + .input__label--isao {
+  pointer-events: none;
+}
+
+/* line 396, scss/_list.scss */
+.input__field--isao:focus + .input__label--isao::after {
+  opacity: 1;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+
+/* line 402, scss/_list.scss */
+.input__label-content--isao {
+  padding: 0.75em 0.15em;
+  -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+  transition: opacity 0.3s, transform 0.3s;
+  -webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+  transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+}
+
+/* line 410, scss/_list.scss */
+.input__field--isao:focus + .input__label--isao .input__label-content--isao {
+  opacity: 0;
+  -webkit-transform: translate3d(0, -50%, 0);
+  transform: translate3d(0, -50%, 0);
 }
 
 /*
