--- a/css/main.css
+++ b/css/main.css
@@ -1627,8 +1627,6 @@ body {
 
 /* line 190, scss/_theme.scss */
 .subject-form {
-  padding-top: 12px;
-  padding-bottom: 12px;
   width: 100%;
   background-color: #410C54;
   color: white;
@@ -1636,6 +1634,10 @@ body {
   font-size: 20px;
   border-radius: 15px;
   cursor: pointer;
+}
+/* line 199, scss/_theme.scss */
+.subject-form button {
+  margin-top: 20px;
 }
 
 /* line 1, scss/_list.scss */
