lots of changes in styling add question/subject

--- a/css/scss/_images.scss
+++ b/css/scss/_images.scss
@@ -253,3 +253,9 @@ body:after {
 }
 
 
+/*preview upload image in makequestion page*/
+.preview {
+  margin-top: 20px; 
+  border: 4px solid #fff;
+
+}
