--- a/css/scss/_list.scss
+++ b/css/scss/_list.scss
@@ -127,6 +127,7 @@
 		padding-left: 3px;
 		display: table;
 		width:100%;
+		cursor: default;
 	}
 
 	h2 {
@@ -172,6 +173,7 @@
 .list-make-green {
 	@extend .list-questions;
 
+
  div {
 		background:  $uq-green;
 	}
@@ -185,6 +187,10 @@
 			transition: 0.4s;
 		}
 	}
+
+	ul li div {
+		cursor: default;
+	}
  #addbutton{
 	width:100%;
  }
@@ -196,6 +202,7 @@
 
 	ul li div {
 		background:  $uq-purple;
+		cursor: default;
 	}
 
 
@@ -231,6 +238,17 @@
 		padding-left: 10px;
 		display: table;
 		min-width: 100%;
+}
+
+.question-container-m{
+		color: white;
+		margin-top: 20px;
+		margin-bottom: 20px;
+		border-radius:15px;
+		padding-top: 8px;
+		padding-left: 10px;
+		padding-bottom: 30px;
+		cursor: default;
 }
 
 .question{
@@ -408,6 +426,179 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .input__field--isao:focus + .input__label--isao .input__label-content--isao {
+	opacity: 0;
+	-webkit-transform: translate3d(0, -50%, 0);
+	transform: translate3d(0, -50%, 0);
+}
+
+
+/*make question text input*/
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
+}
+
+.input-m-t {
+	position: relative;
+	z-index: 1;
+	display: inline-block;
+	margin-right: 1em;
+	max-width: 65%;
+	width: calc(100% - 2em);
+	vertical-align: top;
+}
+
+.input-m {
+	position: relative;
+	z-index: 1;
+	display: inline-block;
+	margin-right: 1em;
+	max-width: 10%;
+	width: calc(100% - 2em);
+	vertical-align: top;
+}
+
+.input__field-m {
+	position: relative;
+	display: block;
+	float: right;
+	padding: 0.8em;
+	width: 60%;
+	border: none;
+	border-radius: 0;
+	background: #f0f0f0;
+	color: #aaa;
+	font-weight: bold;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	-webkit-appearance: none; /* for box shadows to show on iOS */
+}
+
+.input__field-m:focus {
+	outline: none;
+}
+
+.input__label-m {
+	display: inline-block;
+	float: right;
+	padding: 0 1em;
+	width: 50%;
+	color: #6a7989;
+	font-weight: bold;
+	font-size: 14px;
+	-webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
+.input__label-content-m {
+	position: relative;
+	display: block;
+	padding: 1.6em 0;
+	width: 100%;
+	font-size: 14px;
+}
+
+.graphic-m {
+	position: absolute;
+	top: 0;
+	left: 0;
+	fill: none;
+}
+
+.icon-m {
+	color: #ddd;
+	font-size: 150%;
+}
+
+.input__field--isao-m {
+	z-index: 10;
+	padding: 0.75em 0.1em 0.25em;
+	width: 100%;
+	background: transparent;
+	color: white;
+	font-size: 14px;
+
+}
+
+.input__label--isao-m {
+	position: relative;
+	overflow: hidden;
+	padding: 0;
+	width: 100%;
+	color: white;
+	text-align: left;
+	font-weight: bold;
+}
+
+.input__label--isao-m::before {
+	content: '';
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 7px;
+	background: white;
+	-webkit-transform: scale3d(1, 0.4, 1);
+	transform: scale3d(1, 0.4, 1);
+	-webkit-transform-origin: 50% 100%;
+	transform-origin: 50% 100%;
+	-webkit-transition: -webkit-transform 0.3s, background-color 0.3s;
+	transition: transform 0.3s, background-color 0.3s;
+	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+}
+
+.input__label--isao-m::after {
+	content: attr(data-content);
+	position: absolute;
+	top: 0;
+	left: 0;
+	padding: 0.75em 0.15em;
+	color: $uq-purple;
+	opacity: 0;
+	-webkit-transform: translate3d(0, 50%, 0);
+	transform: translate3d(0, 50%, 0);
+	-webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+	transition: opacity 0.3s, transform 0.3s;
+	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+	pointer-events: none;
+	font-size: 14px;
+}
+
+.input__field--isao-m:focus + .input__label--isao-m::before {
+	background-color: $uq-purple;
+	-webkit-transform: scale3d(1, 1, 1);
+	transform: scale3d(1, 1, 1);
+}
+
+.input__field--isao-m:focus + .input__label--isao-m {
+	pointer-events: none;
+}
+
+.input__field--isao-m:focus + .input__label--isao-m::after {
+	opacity: 1;
+	-webkit-transform: translate3d(0, 0, 0);
+	transform: translate3d(0, 0, 0);
+}
+
+.input__label-content--isao-m {
+	color: white;
+	padding: 0.75em 0.15em;
+	-webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+	transition: opacity 0.3s, transform 0.3s;
+	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+}
+
+.input__field--isao-m:focus + .input__label--isao-m .input__label-content--isao-m {
 	opacity: 0;
 	-webkit-transform: translate3d(0, -50%, 0);
 	transform: translate3d(0, -50%, 0);
