--- a/css/scss/_headers.scss
+++ b/css/scss/_headers.scss
@@ -94,5 +94,9 @@ $break-small: 960px;
 	height: 163px;
     width: 100%;
     background: #ffffff;
+	@media screen and (max-width: $break-small) {
+      width: 100px;
+    }
+	
 }
 
