--- a/css/scss/_images.scss
+++ b/css/scss/_images.scss
@@ -252,10 +252,9 @@ body:after {
   opacity: 1;
 }
 
-
-/*preview upload image in makequestion page*/
 .preview {
-  margin-top: 20px; 
+  margin-top: 10px;
+  margin-bottom:10px;  
   border: 4px solid #fff;
 
 }
