--- a/css/scss/_list.scss
+++ b/css/scss/_list.scss
@@ -134,7 +134,7 @@
 		text-align: center;
 		padding-top: 10px;
 		font-weight: 800;
-		font-size: 40px;
+		font-size: 20px;
 	}
 
 	h3 {
@@ -485,7 +485,7 @@ input[type=number]::-webkit-outer-spin-button {
 	float: right;
 	padding: 0 1em;
 	width: 50%;
-	color: #6a7989;
+	color: white;
 	font-weight: bold;
 	font-size: 14px;
 	-webkit-font-smoothing: antialiased;
@@ -561,7 +561,7 @@ input[type=number]::-webkit-outer-spin-button {
 	top: 0;
 	left: 0;
 	padding: 0.75em 0.15em;
-	color: $uq-purple;
+	color: white;
 	opacity: 0;
 	-webkit-transform: translate3d(0, 50%, 0);
 	transform: translate3d(0, 50%, 0);
@@ -574,7 +574,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .input__field--isao-m:focus + .input__label--isao-m::before {
-	background-color: $uq-purple;
+	background-color: $uq-green;
 	-webkit-transform: scale3d(1, 1, 1);
 	transform: scale3d(1, 1, 1);
 }
