--- a/css/main.css
+++ b/css/main.css
@@ -2175,7 +2175,7 @@ input[type=number]::-webkit-outer-spin-button {
   top: 0;
   left: 0;
   padding: 0.75em 0.15em;
-  color: white;
+  color: #8ED676;
   opacity: 0;
   -webkit-transform: translate3d(0, 50%, 0);
   transform: translate3d(0, 50%, 0);
@@ -2218,6 +2218,178 @@ input[type=number]::-webkit-outer-spin-button {
 
 /* line 601, scss/_list.scss */
 .input__field--isao-m:focus + .input__label--isao-m .input__label-content--isao-m {
+  opacity: 0;
+  -webkit-transform: translate3d(0, -50%, 0);
+  transform: translate3d(0, -50%, 0);
+  /*edit question text input*/
+}
+/* line 609, scss/_list.scss */
+.input__field--isao-m:focus + .input__label--isao-m .input__label-content--isao-m input[type=number]::-webkit-inner-spin-button,
+.input__field--isao-m:focus + .input__label--isao-m .input__label-content--isao-m input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
+}
+/* line 617, scss/_list.scss */
+.input__field--isao-m:focus + .input__label--isao-m .input__label-content--isao-m .input-e-t {
+  position: relative;
+  z-index: 1;
+  display: inline-block;
+  margin-right: 1em;
+  max-width: 65%;
+  width: calc(100% - 2em);
+  vertical-align: top;
+}
+/* line 627, scss/_list.scss */
+.input__field--isao-m:focus + .input__label--isao-m .input__label-content--isao-m .input-e {
+  position: relative;
+  z-index: 1;
+  display: inline-block;
+  margin-right: 1em;
+  max-width: 10%;
+  width: calc(100% - 2em);
+  vertical-align: top;
+}
+/* line 637, scss/_list.scss */
+.input__field--isao-m:focus + .input__label--isao-m .input__label-content--isao-m .input__field-e {
+  position: relative;
+  display: block;
+  float: right;
+  padding: 0.8em;
+  width: 60%;
+  border: none;
+  border-radius: 0;
+  background: #f0f0f0;
+  color: #aaa;
+  font-weight: bold;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  -webkit-appearance: none;
+  /* for box shadows to show on iOS */
+}
+/* line 652, scss/_list.scss */
+.input__field--isao-m:focus + .input__label--isao-m .input__label-content--isao-m .input__field-e:focus {
+  outline: none;
+}
+/* line 656, scss/_list.scss */
+.input__field--isao-m:focus + .input__label--isao-m .input__label-content--isao-m .input__label-e {
+  display: inline-block;
+  float: right;
+  padding: 0 1em;
+  width: 50%;
+  color: white;
+  font-weight: bold;
+  font-size: 14px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+/* line 674, scss/_list.scss */
+.input__field--isao-m:focus + .input__label--isao-m .input__label-content--isao-m .input__label-content-e {
+  position: relative;
+  display: block;
+  padding: 1.6em 0;
+  width: 100%;
+  font-size: 14px;
+}
+/* line 682, scss/_list.scss */
+.input__field--isao-m:focus + .input__label--isao-m .input__label-content--isao-m .graphic-e {
+  position: absolute;
+  top: 0;
+  left: 0;
+  fill: none;
+}
+/* line 689, scss/_list.scss */
+.input__field--isao-m:focus + .input__label--isao-m .input__label-content--isao-m .icon-e {
+  color: #ddd;
+  font-size: 150%;
+}
+/* line 694, scss/_list.scss */
+.input__field--isao-m:focus + .input__label--isao-m .input__label-content--isao-m .input__field--isao-e {
+  z-index: 10;
+  padding: 0.75em 0.1em 0.25em;
+  width: 100%;
+  background: transparent;
+  color: white;
+  font-size: 14px;
+}
+/* line 704, scss/_list.scss */
+.input__field--isao-m:focus + .input__label--isao-m .input__label-content--isao-m .input__label--isao-e {
+  position: relative;
+  overflow: hidden;
+  padding: 0;
+  width: 100%;
+  color: white;
+  text-align: left;
+  font-weight: bold;
+}
+/* line 714, scss/_list.scss */
+.input__field--isao-m:focus + .input__label--isao-m .input__label-content--isao-m .input__label--isao-e::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 7px;
+  background: white;
+  -webkit-transform: scale3d(1, 0.4, 1);
+  transform: scale3d(1, 0.4, 1);
+  -webkit-transform-origin: 50% 100%;
+  transform-origin: 50% 100%;
+  -webkit-transition: -webkit-transform 0.3s, background-color 0.3s;
+  transition: transform 0.3s, background-color 0.3s;
+  -webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+  transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+}
+/* line 731, scss/_list.scss */
+.input__field--isao-m:focus + .input__label--isao-m .input__label-content--isao-m .input__label--isao-e::after {
+  content: attr(data-content);
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0.75em 0.15em;
+  color: #410C54;
+  opacity: 0;
+  -webkit-transform: translate3d(0, 50%, 0);
+  transform: translate3d(0, 50%, 0);
+  -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+  transition: opacity 0.3s, transform 0.3s;
+  -webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+  transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+  pointer-events: none;
+  font-size: 14px;
+}
+/* line 749, scss/_list.scss */
+.input__field--isao-m:focus + .input__label--isao-m .input__label-content--isao-m .input__field--isao-e:focus + .input__label--isao-e::before {
+  background-color: #410C54;
+  -webkit-transform: scale3d(1, 1, 1);
+  transform: scale3d(1, 1, 1);
+}
+/* line 755, scss/_list.scss */
+.input__field--isao-m:focus + .input__label--isao-m .input__label-content--isao-m .input__field--isao-e:focus + .input__label--isao-e {
+  pointer-events: none;
+}
+/* line 759, scss/_list.scss */
+.input__field--isao-m:focus + .input__label--isao-m .input__label-content--isao-m .input__field--isao-e:focus + .input__label--isao-e::after {
+  opacity: 1;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+/* line 765, scss/_list.scss */
+.input__field--isao-m:focus + .input__label--isao-m .input__label-content--isao-m .input__label-content--isao-e {
+  color: white;
+  padding: 0.75em 0.15em;
+  -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+  transition: opacity 0.3s, transform 0.3s;
+  -webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+  transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+}
+/* line 774, scss/_list.scss */
+.input__field--isao-m:focus + .input__label--isao-m .input__label-content--isao-m .input__field--isao-e:focus + .input__label--isao-e .input__label-content--isao-e {
   opacity: 0;
   -webkit-transform: translate3d(0, -50%, 0);
   transform: translate3d(0, -50%, 0);
