--- a/css/main.css
+++ b/css/main.css
@@ -1233,7 +1233,90 @@ body {
   color: black;
 }
 
-/* line 71, scss/_typography.scss */
+/* line 70, scss/_typography.scss */
+.type-body-url {
+  text-align: center;
+  padding-top: 10px;
+  font-weight: 500;
+  font-size: 2vmin;
+  color: #8ED676;
+}
+
+/* line 78, scss/_typography.scss */
+.type-code {
+  font-size: 5vmin;
+  color: black;
+  font-weight: 900;
+}
+/* line 83, scss/_typography.scss */
+.type-code span {
+  background: black;
+  color: white;
+}
+
+/* line 89, scss/_typography.scss */
+.instruction-container {
+  display: block;
+  margin: auto;
+  width: 400px;
+}
+/* line 94, scss/_typography.scss */
+.instruction-container h3 {
+  color: black;
+  display: inline-block;
+  font-size: 3vmin;
+}
+/* line 99, scss/_typography.scss */
+.instruction-container h3 span {
+  background: black;
+  color: white;
+  padding: 4px;
+}
+/* line 106, scss/_typography.scss */
+.instruction-container .circle-number {
+  margin-right: 20px;
+  width: 50px;
+  height: 50px;
+  font-size: 30px;
+  color: white;
+  text-align: center;
+  font-weight: 900;
+  background: #410C54;
+  border-radius: 50%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  display: inline-block;
+}
+/* line 117, scss/_typography.scss */
+.instruction-container .circle-number p {
+  padding-top: 10px;
+}
+
+/* line 132, scss/_typography.scss */
+.instruction-question {
+  font-weight: 900;
+  font-size: 30px;
+  text-align: center;
+}
+
+/* line 142, scss/_typography.scss */
+.instruction-q {
+  font-size: 15px;
+  font-weight: 900;
+  color: black;
+  text-align: center;
+  color: #410C54;
+}
+
+/* line 150, scss/_typography.scss */
+.instruction-bottom {
+  width: 100%;
+  height: 2px;
+  background: #410C54;
+  margin-bottom: 20px;
+}
+
+/* line 159, scss/_typography.scss */
 .question-body-heading {
   text-align: center;
   padding-top: 10px;
@@ -1241,7 +1324,7 @@ body {
   color: black;
 }
 
-/* line 79, scss/_typography.scss */
+/* line 167, scss/_typography.scss */
 .type-body-subheading {
   text-align: center;
   padding-top: 10px;
@@ -1249,7 +1332,7 @@ body {
   padding-bottom: 10px;
 }
 
-/* line 88, scss/_typography.scss */
+/* line 176, scss/_typography.scss */
 .startpage-welcome {
   color: white;
   text-align: center;
@@ -1259,18 +1342,18 @@ body {
   font-size: 1em;
 }
 
-/* line 97, scss/_typography.scss */
+/* line 185, scss/_typography.scss */
 .start-section-input {
   opacity: .8;
 }
-/* line 99, scss/_typography.scss */
+/* line 187, scss/_typography.scss */
 .start-section-input h3 {
   text-align: center;
   padding-top: 10px;
   font-weight: 800;
 }
 
-/* line 113, scss/_typography.scss */
+/* line 201, scss/_typography.scss */
 .lecturer-startpage-welcome {
   color: #000;
   text-align: center;
@@ -1280,12 +1363,12 @@ body {
   font-size: 1em;
 }
 
-/* line 122, scss/_typography.scss */
+/* line 210, scss/_typography.scss */
 #lecturer-start-username {
   font-weight: 600;
 }
 
-/* line 127, scss/_typography.scss */
+/* line 215, scss/_typography.scss */
 .type-lecture-mode h2, .type-prepare-mode h2 {
   color: white;
   font-size: 50px;
@@ -1294,18 +1377,18 @@ body {
   padding-top: 10px;
   margin-bottom: 30px;
 }
-/* line 136, scss/_typography.scss */
+/* line 224, scss/_typography.scss */
 .type-lecture-mode .prepare-use, .type-prepare-mode .prepare-use {
   position: absolute;
   left: 50%;
   bottom: 10px;
 }
-/* line 141, scss/_typography.scss */
+/* line 229, scss/_typography.scss */
 .type-lecture-mode img, .type-prepare-mode img {
   width: 25%;
 }
 
-/* line 146, scss/_typography.scss */
+/* line 234, scss/_typography.scss */
 .typography-l-h3 {
   color: white;
   display: inline-block;
@@ -1314,15 +1397,7 @@ body {
   font-family: "open-sans-semibold", Arial;
 }
 
-/* line 154, scss/_typography.scss */
-.type-body-url {
-  font-size: 20px;
-  text-align: center;
-  color: black;
-  margin-top: 10px;
-}
-
-/* line 161, scss/_typography.scss */
+/* line 243, scss/_typography.scss */
 .type-body-response {
   font-size: 20px;
   text-align: left;
@@ -1426,7 +1501,7 @@ body {
   -webkit-animation: size 120s linear;
   animation: size 120s linear;
   position: absolute;
-  top: 50%;
+  top: 60%;
   margin-top: -25vmin;
   left: 50%;
 }
@@ -1474,7 +1549,7 @@ body {
   border: 5px solid white;
   border-radius: 50%;
   position: absolute;
-  top: 50%;
+  top: 60%;
   margin-top: -25vmin;
   text-align: center;
 }
@@ -1495,7 +1570,7 @@ body {
   border: 5px solid  white;
   border-radius: 50%;
   position: absolute;
-  top: 50%;
+  top: 60%;
   margin-top: -12.5vmin;
   text-align: center;
 }
@@ -1515,7 +1590,7 @@ body {
   border: 5px solid white;
   border-radius: 50%;
   position: absolute;
-  top: 50%;
+  top: 60%;
   margin-top: -18.75vmin;
   text-align: center;
 }
@@ -1535,7 +1610,7 @@ body {
   border: 5px solid  white;
   border-radius: 50%;
   position: absolute;
-  top: 50%;
+  top: 60%;
   margin-top: -6.25vmin;
   text-align: center;
 }
