--- a/css/scss/_typography.scss
+++ b/css/scss/_typography.scss
@@ -139,6 +139,13 @@ body {
 	}
 }
 
+.text-subject {
+	font-size: 5vmin;
+	font-weight: 900;
+	
+
+}
+
 .instruction-q {
 	font-size: 15px;
 	font-weight: 900;
