--- a/css/main.css
+++ b/css/main.css
@@ -327,7 +327,7 @@ input:focus {
 
 /* line 141, scss/_buttons.scss */
 .button-back-lecture {
-  background-color: #410C54;
+  background-color: #6eca4f;
   width: 120px;
   height: 50px;
   display: inline-block;
@@ -341,7 +341,7 @@ input:focus {
 }
 /* line 155, scss/_buttons.scss */
 .button-back-lecture:hover {
-  background-color: #1e0627;
+  background-color: #54b135;
 }
 
 /* line 160, scss/_buttons.scss */
@@ -1316,6 +1316,12 @@ body {
 }
 
 /* line 142, scss/_typography.scss */
+.text-subject {
+  font-size: 5vmin;
+  font-weight: 900;
+}
+
+/* line 149, scss/_typography.scss */
 .instruction-q {
   font-size: 15px;
   font-weight: 900;
@@ -1324,7 +1330,7 @@ body {
   color: #410C54;
 }
 
-/* line 150, scss/_typography.scss */
+/* line 157, scss/_typography.scss */
 .instruction-bottom {
   width: 100%;
   height: 2px;
@@ -1332,7 +1338,7 @@ body {
   margin-bottom: 20px;
 }
 
-/* line 159, scss/_typography.scss */
+/* line 166, scss/_typography.scss */
 .question-body-heading {
   text-align: center;
   padding-top: 10px;
@@ -1340,7 +1346,7 @@ body {
   color: black;
 }
 
-/* line 167, scss/_typography.scss */
+/* line 174, scss/_typography.scss */
 .type-body-subheading {
   text-align: center;
   padding-top: 10px;
@@ -1348,7 +1354,7 @@ body {
   padding-bottom: 10px;
 }
 
-/* line 176, scss/_typography.scss */
+/* line 183, scss/_typography.scss */
 .startpage-welcome {
   color: white;
   text-align: center;
@@ -1358,18 +1364,18 @@ body {
   font-size: 1em;
 }
 
-/* line 185, scss/_typography.scss */
+/* line 192, scss/_typography.scss */
 .start-section-input {
   opacity: .8;
 }
-/* line 187, scss/_typography.scss */
+/* line 194, scss/_typography.scss */
 .start-section-input h3 {
   text-align: center;
   padding-top: 10px;
   font-weight: 800;
 }
 
-/* line 201, scss/_typography.scss */
+/* line 208, scss/_typography.scss */
 .lecturer-startpage-welcome {
   color: #000;
   text-align: center;
@@ -1379,12 +1385,12 @@ body {
   font-size: 1em;
 }
 
-/* line 210, scss/_typography.scss */
+/* line 217, scss/_typography.scss */
 #lecturer-start-username {
   font-weight: 600;
 }
 
-/* line 215, scss/_typography.scss */
+/* line 222, scss/_typography.scss */
 .type-lecture-mode h2, .type-prepare-mode h2 {
   color: white;
   font-size: 50px;
@@ -1393,18 +1399,18 @@ body {
   padding-top: 10px;
   margin-bottom: 30px;
 }
-/* line 224, scss/_typography.scss */
+/* line 231, scss/_typography.scss */
 .type-lecture-mode .prepare-use, .type-prepare-mode .prepare-use {
   position: absolute;
   left: 50%;
   bottom: 10px;
 }
-/* line 229, scss/_typography.scss */
+/* line 236, scss/_typography.scss */
 .type-lecture-mode img, .type-prepare-mode img {
   width: 25%;
 }
 
-/* line 234, scss/_typography.scss */
+/* line 241, scss/_typography.scss */
 .typography-l-h3 {
   color: white;
   display: inline-block;
@@ -1413,7 +1419,7 @@ body {
   font-family: "open-sans-semibold", Arial;
 }
 
-/* line 243, scss/_typography.scss */
+/* line 250, scss/_typography.scss */
 .type-body-response {
   font-size: 20px;
   text-align: left;
