--- a/css/scss/_theme.scss
+++ b/css/scss/_theme.scss
@@ -53,9 +53,10 @@ a {
 }
 
 .bg-prepare{
-	background-image: url(../assets/images/bg-prepare.jpg);
-	background-repeat:none;
-	background-size:cover;
+	// Background or white 
+	// background-image: url(../assets/images/bg-prepare.jpg);
+	// background-repeat:none;
+	// background-size:cover;
 }
 
 .bg-lecture{
