--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@
   MIXINS 
 ************************* */
 /* line 38, scss/main.scss */
-.noselect, .list-subjects li, .list-subjects-purple li, .list-subjects-green li, .list-questions-green li, .list-questions li, .list-make-green li, .list-questions-purple li, .student-list li {
+.noselect, .list-subjects li, .list-subjects-purple li, .list-subjects-green li, .list-questions-green li, .list-questions li, .list-make-green li, .list-questions-purple li, .student-list li, .closed-questions li {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -1770,6 +1770,7 @@ body {
   margin-top: -5px;
 }
 
+/*style for question list in student question page*/
 /* line 86, scss/_list.scss */
 .student-list {
   width: 80%;
@@ -1789,19 +1790,52 @@ body {
   padding-left: 20px;
   font-size: 20px;
   text-align: center;
+  border-radius: 14px;
 }
-/* line 105, scss/_list.scss */
+/* line 106, scss/_list.scss */
 .student-list li:hover {
-  background: white;
+  background: #dff3d8;
   color: #8ED676;
   transition: 0.4s;
 }
-/* line 112, scss/_list.scss */
+/* line 113, scss/_list.scss */
 .student-list li button {
   float: right;
 }
 
-/* line 120, scss/_list.scss */
+/* line 119, scss/_list.scss */
+.closed-questions {
+  width: 80%;
+  margin: auto;
+}
+/* line 124, scss/_list.scss */
+.closed-questions li {
+  margin-bottom: 10px;
+  background: gray;
+  color: #8ED676;
+  margin: 3px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  transition: .3s;
+  cursor: pointer;
+  font-size: 30px;
+  padding-left: 20px;
+  font-size: 20px;
+  text-align: center;
+  border-radius: 14px;
+}
+/* line 139, scss/_list.scss */
+.closed-questions li:hover {
+  background: gray;
+  color: #8ED676;
+  cursor: default;
+}
+/* line 146, scss/_list.scss */
+.closed-questions li button {
+  float: right;
+}
+
+/* line 155, scss/_list.scss */
 .list-questions ul li, .list-make-green ul li, .list-questions-purple ul li {
   color: white;
   min-height: 30px;
@@ -1814,26 +1848,26 @@ body {
   width: 100%;
   cursor: default;
 }
-/* line 133, scss/_list.scss */
+/* line 168, scss/_list.scss */
 .list-questions h2, .list-make-green h2, .list-questions-purple h2 {
   text-align: center;
   padding-top: 10px;
   font-weight: 800;
   font-size: 20px;
 }
-/* line 140, scss/_list.scss */
+/* line 175, scss/_list.scss */
 .list-questions h3, .list-make-green h3, .list-questions-purple h3 {
   text-align: center;
   padding-top: 10px;
   font-weight: 500;
   padding-bottom: 10px;
 }
-/* line 147, scss/_list.scss */
+/* line 182, scss/_list.scss */
 .list-questions label, .list-make-green label, .list-questions-purple label {
   font-size: 20px;
   color: black;
 }
-/* line 151, scss/_list.scss */
+/* line 186, scss/_list.scss */
 .list-questions .button, .list-make-green .button, .list-questions-purple .button {
   border-radius: 12px;
   margin-right: 5px;
@@ -1847,7 +1881,7 @@ body {
   color: #410C54;
   width: 75px;
 }
-/* line 163, scss/_list.scss */
+/* line 198, scss/_list.scss */
 .list-questions .button:hover, .list-make-green .button:hover, .list-questions-purple .button:hover {
   border: 2px solid #410C54;
   background: #410C54;
@@ -1855,44 +1889,44 @@ body {
   transition: 0.4s;
 }
 
-/* line 177, scss/_list.scss */
+/* line 212, scss/_list.scss */
 .list-make-green div {
   background: #8ED676;
 }
-/* line 181, scss/_list.scss */
+/* line 216, scss/_list.scss */
 .list-make-green .button {
   color: #8ED676;
 }
-/* line 183, scss/_list.scss */
+/* line 218, scss/_list.scss */
 .list-make-green .button:hover {
   border: 2px solid #8ED676;
   background: #8ED676;
   color: white;
   transition: 0.4s;
 }
-/* line 191, scss/_list.scss */
+/* line 226, scss/_list.scss */
 .list-make-green ul li div {
   cursor: default;
 }
-/* line 194, scss/_list.scss */
+/* line 229, scss/_list.scss */
 .list-make-green #addbutton {
   width: 100%;
 }
 
-/* line 203, scss/_list.scss */
+/* line 238, scss/_list.scss */
 .list-questions-purple ul li div {
   background: #410C54;
   cursor: default;
 }
 
-/* line 212, scss/_list.scss */
+/* line 247, scss/_list.scss */
 .grid-container {
   margin: 0 auto;
   width: 1200px;
   padding-top: 20px;
 }
 
-/* line 219, scss/_list.scss */
+/* line 254, scss/_list.scss */
 .grid-response {
   float: left;
   width: 110px;
@@ -1905,7 +1939,7 @@ body {
   border-color: #410C54;
 }
 
-/* line 231, scss/_list.scss */
+/* line 266, scss/_list.scss */
 .question-container {
   color: white;
   min-height: 30px;
@@ -1918,7 +1952,7 @@ body {
   min-width: 100%;
 }
 
-/* line 243, scss/_list.scss */
+/* line 278, scss/_list.scss */
 .question-container-m {
   color: white;
   margin-top: 20px;
@@ -1930,7 +1964,7 @@ body {
   cursor: default;
 }
 
-/* line 254, scss/_list.scss */
+/* line 289, scss/_list.scss */
 .question {
   float: left;
   padding-bottom: 12px;
@@ -1940,14 +1974,14 @@ body {
   text-overflow: ellipsis;
   width: 30vw;
 }
-/* line 262, scss/_list.scss */
+/* line 297, scss/_list.scss */
 .question:hover {
   white-space: normal;
   text-overflow: inherit;
   overflow: visible;
 }
 
-/* line 269, scss/_list.scss */
+/* line 304, scss/_list.scss */
 .question-button {
   float: right;
   width: 38%;
@@ -1955,7 +1989,7 @@ body {
 }
 
 /* Style for text input animation Isao */
-/* line 277, scss/_list.scss */
+/* line 312, scss/_list.scss */
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
@@ -1964,7 +1998,7 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0;
 }
 
-/* line 285, scss/_list.scss */
+/* line 320, scss/_list.scss */
 .input {
   position: relative;
   z-index: 1;
@@ -1975,7 +2009,7 @@ input[type=number]::-webkit-outer-spin-button {
   vertical-align: top;
 }
 
-/* line 295, scss/_list.scss */
+/* line 330, scss/_list.scss */
 .input__field {
   position: relative;
   display: block;
@@ -1992,12 +2026,12 @@ input[type=number]::-webkit-outer-spin-button {
   /* for box shadows to show on iOS */
 }
 
-/* line 310, scss/_list.scss */
+/* line 345, scss/_list.scss */
 .input__field:focus {
   outline: none;
 }
 
-/* line 314, scss/_list.scss */
+/* line 349, scss/_list.scss */
 .input__label {
   display: inline-block;
   float: right;
@@ -2016,7 +2050,7 @@ input[type=number]::-webkit-outer-spin-button {
   user-select: none;
 }
 
-/* line 332, scss/_list.scss */
+/* line 367, scss/_list.scss */
 .input__label-content {
   position: relative;
   display: block;
@@ -2024,7 +2058,7 @@ input[type=number]::-webkit-outer-spin-button {
   width: 100%;
 }
 
-/* line 339, scss/_list.scss */
+/* line 374, scss/_list.scss */
 .graphic {
   position: absolute;
   top: 0;
@@ -2032,13 +2066,13 @@ input[type=number]::-webkit-outer-spin-button {
   fill: none;
 }
 
-/* line 346, scss/_list.scss */
+/* line 381, scss/_list.scss */
 .icon {
   color: #ddd;
   font-size: 150%;
 }
 
-/* line 351, scss/_list.scss */
+/* line 386, scss/_list.scss */
 .input__field--isao {
   z-index: 10;
   padding: 0.75em 0.1em 0.25em;
@@ -2049,7 +2083,7 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 14px;
 }
 
-/* line 361, scss/_list.scss */
+/* line 396, scss/_list.scss */
 .input__label--isao {
   position: relative;
   overflow: hidden;
@@ -2059,7 +2093,7 @@ input[type=number]::-webkit-outer-spin-button {
   text-align: left;
 }
 
-/* line 370, scss/_list.scss */
+/* line 405, scss/_list.scss */
 .input__label--isao::before {
   content: '';
   position: absolute;
@@ -2077,7 +2111,7 @@ input[type=number]::-webkit-outer-spin-button {
   transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 }
 
-/* line 387, scss/_list.scss */
+/* line 422, scss/_list.scss */
 .input__label--isao::after {
   content: attr(data-content);
   position: absolute;
@@ -2095,26 +2129,26 @@ input[type=number]::-webkit-outer-spin-button {
   pointer-events: none;
 }
 
-/* line 404, scss/_list.scss */
+/* line 439, scss/_list.scss */
 .input__field--isao:focus + .input__label--isao::before {
   background-color: #8ED676;
   -webkit-transform: scale3d(1, 1, 1);
   transform: scale3d(1, 1, 1);
 }
 
-/* line 410, scss/_list.scss */
+/* line 445, scss/_list.scss */
 .input__field--isao:focus + .input__label--isao {
   pointer-events: none;
 }
 
-/* line 414, scss/_list.scss */
+/* line 449, scss/_list.scss */
 .input__field--isao:focus + .input__label--isao::after {
   opacity: 1;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
 
-/* line 420, scss/_list.scss */
+/* line 455, scss/_list.scss */
 .input__label-content--isao {
   padding: 0.75em 0.15em;
   -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
@@ -2123,7 +2157,7 @@ input[type=number]::-webkit-outer-spin-button {
   transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 }
 
-/* line 428, scss/_list.scss */
+/* line 463, scss/_list.scss */
 .input__field--isao:focus + .input__label--isao .input__label-content--isao {
   opacity: 0;
   -webkit-transform: translate3d(0, -50%, 0);
@@ -2131,7 +2165,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 /*make question text input*/
-/* line 436, scss/_list.scss */
+/* line 471, scss/_list.scss */
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
@@ -2140,7 +2174,7 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0;
 }
 
-/* line 444, scss/_list.scss */
+/* line 479, scss/_list.scss */
 .input-m-t {
   position: relative;
   z-index: 1;
@@ -2151,7 +2185,7 @@ input[type=number]::-webkit-outer-spin-button {
   vertical-align: top;
 }
 
-/* line 454, scss/_list.scss */
+/* line 489, scss/_list.scss */
 .input-m {
   position: relative;
   z-index: 1;
@@ -2162,7 +2196,7 @@ input[type=number]::-webkit-outer-spin-button {
   vertical-align: top;
 }
 
-/* line 464, scss/_list.scss */
+/* line 499, scss/_list.scss */
 .input__field-m {
   position: relative;
   display: block;
@@ -2179,12 +2213,12 @@ input[type=number]::-webkit-outer-spin-button {
   /* for box shadows to show on iOS */
 }
 
-/* line 479, scss/_list.scss */
+/* line 514, scss/_list.scss */
 .input__field-m:focus {
   outline: none;
 }
 
-/* line 483, scss/_list.scss */
+/* line 518, scss/_list.scss */
 .input__label-m {
   display: inline-block;
   float: right;
@@ -2203,7 +2237,7 @@ input[type=number]::-webkit-outer-spin-button {
   user-select: none;
 }
 
-/* line 501, scss/_list.scss */
+/* line 536, scss/_list.scss */
 .input__label-content-m {
   position: relative;
   display: block;
@@ -2212,7 +2246,7 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 14px;
 }
 
-/* line 509, scss/_list.scss */
+/* line 544, scss/_list.scss */
 .graphic-m {
   position: absolute;
   top: 0;
@@ -2220,13 +2254,13 @@ input[type=number]::-webkit-outer-spin-button {
   fill: none;
 }
 
-/* line 516, scss/_list.scss */
+/* line 551, scss/_list.scss */
 .icon-m {
   color: #ddd;
   font-size: 150%;
 }
 
-/* line 521, scss/_list.scss */
+/* line 556, scss/_list.scss */
 .input__field--isao-m {
   z-index: 10;
   padding: 0.75em 0.1em 0.25em;
@@ -2236,7 +2270,7 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 14px;
 }
 
-/* line 531, scss/_list.scss */
+/* line 566, scss/_list.scss */
 .input__label--isao-m {
   position: relative;
   overflow: hidden;
@@ -2247,7 +2281,7 @@ input[type=number]::-webkit-outer-spin-button {
   font-weight: bold;
 }
 
-/* line 541, scss/_list.scss */
+/* line 576, scss/_list.scss */
 .input__label--isao-m::before {
   content: '';
   position: absolute;
@@ -2265,7 +2299,7 @@ input[type=number]::-webkit-outer-spin-button {
   transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 }
 
-/* line 558, scss/_list.scss */
+/* line 593, scss/_list.scss */
 .input__label--isao-m::after {
   content: attr(data-content);
   position: absolute;
@@ -2284,26 +2318,26 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 14px;
 }
 
-/* line 576, scss/_list.scss */
+/* line 611, scss/_list.scss */
 .input__field--isao-m:focus + .input__label--isao-m::before {
   background-color: #8ED676;
   -webkit-transform: scale3d(1, 1, 1);
   transform: scale3d(1, 1, 1);
 }
 
-/* line 582, scss/_list.scss */
+/* line 617, scss/_list.scss */
 .input__field--isao-m:focus + .input__label--isao-m {
   pointer-events: none;
 }
 
-/* line 586, scss/_list.scss */
+/* line 621, scss/_list.scss */
 .input__field--isao-m:focus + .input__label--isao-m::after {
   opacity: 1;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
 
-/* line 592, scss/_list.scss */
+/* line 627, scss/_list.scss */
 .input__label-content--isao-m {
   color: white;
   padding: 0.75em 0.15em;
@@ -2313,7 +2347,7 @@ input[type=number]::-webkit-outer-spin-button {
   transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 }
 
-/* line 601, scss/_list.scss */
+/* line 636, scss/_list.scss */
 .input__field--isao-m:focus + .input__label--isao-m .input__label-content--isao-m {
   opacity: 0;
   -webkit-transform: translate3d(0, -50%, 0);
@@ -2321,7 +2355,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 /*edit question text input*/
-/* line 616, scss/_list.scss */
+/* line 651, scss/_list.scss */
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
@@ -2330,7 +2364,7 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0;
 }
 
-/* line 624, scss/_list.scss */
+/* line 659, scss/_list.scss */
 .input-e-t {
   position: relative;
   z-index: 1;
@@ -2341,7 +2375,7 @@ input[type=number]::-webkit-outer-spin-button {
   vertical-align: top;
 }
 
-/* line 634, scss/_list.scss */
+/* line 669, scss/_list.scss */
 .input-e {
   position: relative;
   z-index: 1;
@@ -2352,7 +2386,7 @@ input[type=number]::-webkit-outer-spin-button {
   vertical-align: top;
 }
 
-/* line 644, scss/_list.scss */
+/* line 679, scss/_list.scss */
 .input__field-e {
   position: relative;
   display: block;
@@ -2369,12 +2403,12 @@ input[type=number]::-webkit-outer-spin-button {
   /* for box shadows to show on iOS */
 }
 
-/* line 659, scss/_list.scss */
+/* line 694, scss/_list.scss */
 .input__field-e:focus {
   outline: none;
 }
 
-/* line 663, scss/_list.scss */
+/* line 698, scss/_list.scss */
 .input__label-e {
   display: inline-block;
   float: right;
@@ -2393,7 +2427,7 @@ input[type=number]::-webkit-outer-spin-button {
   user-select: none;
 }
 
-/* line 681, scss/_list.scss */
+/* line 716, scss/_list.scss */
 .input__label-content-e {
   position: relative;
   display: block;
@@ -2402,7 +2436,7 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 14px;
 }
 
-/* line 689, scss/_list.scss */
+/* line 724, scss/_list.scss */
 .graphic-e {
   position: absolute;
   top: 0;
@@ -2410,13 +2444,13 @@ input[type=number]::-webkit-outer-spin-button {
   fill: none;
 }
 
-/* line 696, scss/_list.scss */
+/* line 731, scss/_list.scss */
 .icon-e {
   color: #ddd;
   font-size: 150%;
 }
 
-/* line 701, scss/_list.scss */
+/* line 736, scss/_list.scss */
 .input__field--isao-e {
   z-index: 10;
   padding: 0.75em 0.1em 0.25em;
@@ -2426,7 +2460,7 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 14px;
 }
 
-/* line 711, scss/_list.scss */
+/* line 746, scss/_list.scss */
 .input__label--isao-e {
   position: relative;
   overflow: hidden;
@@ -2437,7 +2471,7 @@ input[type=number]::-webkit-outer-spin-button {
   font-weight: bold;
 }
 
-/* line 721, scss/_list.scss */
+/* line 756, scss/_list.scss */
 .input__label--isao-e::before {
   content: '';
   position: absolute;
@@ -2455,7 +2489,7 @@ input[type=number]::-webkit-outer-spin-button {
   transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 }
 
-/* line 738, scss/_list.scss */
+/* line 773, scss/_list.scss */
 .input__label--isao-e::after {
   content: attr(data-content);
   position: absolute;
@@ -2474,26 +2508,26 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 14px;
 }
 
-/* line 756, scss/_list.scss */
+/* line 791, scss/_list.scss */
 .input__field--isao-e:focus + .input__label--isao-e::before {
   background-color: #410C54;
   -webkit-transform: scale3d(1, 1, 1);
   transform: scale3d(1, 1, 1);
 }
 
-/* line 762, scss/_list.scss */
+/* line 797, scss/_list.scss */
 .input__field--isao-e:focus + .input__label--isao-e {
   pointer-events: none;
 }
 
-/* line 766, scss/_list.scss */
+/* line 801, scss/_list.scss */
 .input__field--isao-e:focus + .input__label--isao-e::after {
   opacity: 1;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
 
-/* line 772, scss/_list.scss */
+/* line 807, scss/_list.scss */
 .input__label-content--isao-e {
   color: white;
   padding: 0.75em 0.15em;
@@ -2503,7 +2537,7 @@ input[type=number]::-webkit-outer-spin-button {
   transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 }
 
-/* line 781, scss/_list.scss */
+/* line 816, scss/_list.scss */
 .input__field--isao-e:focus + .input__label--isao-e .input__label-content--isao-e {
   opacity: 0;
   -webkit-transform: translate3d(0, -50%, 0);
